--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/favion/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="./index.css">
   <!-- Leaflet CSS (for map styles) -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 
@@ -67,6 +67,6 @@
     </div>
 
   </div>
-  <script src="/index.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
